--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body class="sidebar-dark">
   <app-root>
     <div class="spinner-wrapper full-screen">
-      <div class="spinner"></div>
+      <img src="assets/images/leal-logo.gif" alt="" srcset="">
     </div>
   </app-root>
 </body>
